# miralldroid

./: .gitignore  BUILD.md  DEVELOP.md  FAQ.md  LICENSE  Makefile.CrossWindows  README.md  cross_win32.txt  cross_win64.txt  meson.build  meson_options.txt  release.sh  run
app/: meson.build
app/src/: compat.h  decoder.c  input_manager.c  input_manager.h  main.c  miralldroid.c  miralldroid.h  recorder.c  recorder.h  screen.c  screen.h  server.c
app/src/sys/win/: resources.rc.in
config/checkstyle/: checkstyle.xml
gradle/wrapper/: gradle-wrapper.properties
prebuilt-deps/: Makefile
scripts/: run-miralldroid.sh
server/: build.gradle  meson.build
server/src/main/: AndroidManifest.xml
server/src/main/java/org/vispo/miralldroid/: ControlEvent.java  ControlEventReader.java  DesktopConnection.java  Device.java  DisplayInfo.java  EventController.java  IO.java  KeyComposition.java  Ln.java  Options.java  Position.java  ScreenEncoder.java  ScreenInfo.java  Server.java  Size.java
server/src/main/java/org/vispo/miralldroid/wrappers/: DisplayManager.java  InputManager.java  PowerManager.java  ServiceManager.java  SurfaceControl.java  WindowManager.java
server/src/test/java/org/vispo/miralldroid/: ControlEventReaderTest.java
